--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,6 @@ a:hover::before {
   transform: scaleX(1);
 }
 
-
 li > img {
   margin: 10px 10px;
   display: flex;
@@ -240,11 +239,14 @@ h4 {
 
 .temp-card {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 20px;
+  background-color: #ffffff;
   background-image: linear-gradient(
-    63.1deg,
-    rgba(5, 23, 111, 1) 16.4%,
-    rgba(24, 95, 240, 1) 64.5%
+    90deg,
+    #ffffff 0%,
+    #0b67e0 55%,
+    #ffffff 99%
   );
 }
 
