--- a/styles.css
+++ b/styles.css
@@ -71,13 +71,13 @@ li {
   border-bottom-left-radius: 25px;
 }
 
-a {
+.news-a {
   color: #18272f;
   position: relative;
   text-decoration: none;
 }
 
-a::before {
+.news-a::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -91,7 +91,7 @@ a::before {
   transition: transform 0.5s ease-in-out;
 }
 
-a:hover::before {
+.news-a:hover::before {
   transform-origin: left;
   transform: scaleX(1);
 }
@@ -196,6 +196,7 @@ h4 {
   width: 175px;
   height: 175px;
   padding-top: 20px;
+  border-radius: 25%;
 }
 
 .next-race {
